--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
                 
                 <h1 class="title"><center>Spotify Stats</center></h1>
                 <center>
-                <button class="btn1" , onclick="window.location = '/login'"><center>Log In</center> </button>
+                <button class="btn1" , onclick="window.location = 'http://localhost:3002/login'"><center>Log In</center> </button>
                 </center>
                 
         </div>
