fixed small bugs

--- a/public/error.html
+++ b/public/error.html
@@ -18,7 +18,7 @@
     
 
     <div id="topPage" style="background-color:#191414;">
-        <h4 id="title"  style="margin-top: 10px; margin-left: 15px;"><img src="images/unnamed.png" alt="" style="height: 50px; width: 50px; padding-right: 10px; position: relative; top:5px">Stats<button id="btn2" onclick="window.open('https://accounts.spotify.com/en/logout','_blank');window.location.reload();" style="background-color: red;" ><center>Log Out</center> </button></h>
+        <h4 id="title"  style="margin-top: 10px; margin-left: 15px;"><img src="images/unnamed.png" alt="" style="height: 50px; width: 50px; padding-right: 10px; position: relative; top:5px">Stats<button id="btn2" onclick="window.open('https://accounts.spotify.com/en/logout','_blank');window.location='/';" style="background-color: red;" ><center>Log Out</center> </button></h>
     </div>
 
   
@@ -30,7 +30,8 @@
     </div>
 
 
-    <h1>Sorry an error occured</h1>
+    <h3 style="text-align: center; margin-top: 200px;">Whoops looks like an <br> error has occured :(</h3>
+    <h5 style="text-align: center;">Please contact support to resolve this issue</h5>
 </body>
 
 </html>
