--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spotify Stats</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://db.onlinewebfonts.com/c/3a47f5f06b5484abfeee9eac90348a9c?family=Gotham" rel="stylesheet" type="text/css"/>
+        <link href="//db.onlinewebfonts.com/c/3a47f5f06b5484abfeee9eac90348a9c?family=Gotham" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <p style="font-size:20px; font-family: 'Gotham', sans-serif; padding-left:20px;color: #191414;">Created by Abhishek</p>
