--- a/public/stats.html
+++ b/public/stats.html
@@ -13,7 +13,7 @@
 <body>
     <script>
         if(performance.navigation.type==1) {
-            window.location.href='index.html'
+            window.location.href='/'
         }
 
     </script>
