added browser icons

--- a/public/error.html
+++ b/public/error.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <title>Stats</title>
+    <link rel="icon" href='images/unnamed.png'>
 </head>
 <body>
     <script>
