--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="//fonts.googleapis.com">
         <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
         <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+        <link rel="icon" href='images/unnamed.png'>
     </head>
     <body>
         <p style="font-size:20px; font-family: 'Gotham', sans-serif; padding-left:20px;color: #191414;">Created by Abhishek</p>
