--- a/public/stats.html
+++ b/public/stats.html
@@ -34,11 +34,11 @@
 
  
     
-
     <div class="socials">
-        <a href="https://github.com/Abhi-she-k"><img class="socialbtn" src="images/git.png" alt=""> <a href="#topPage"><img id="top" src="images/top.png" alt=""></a></a>
+        <a href="https://github.com/Abhi-she-k"><img class="socialbtn" src="images/git.png" alt=""></a>
         <a href="https://www.linkedin.com/in/abhi311/"><img class="socialbtn" src="images/linkedin.png" alt=""></a>
         <a href="mailto:abhishek.paul@ryerson.ca"><img class="socialbtn" src="images/Gmail.png" alt=""></a>
+        <a href="http://abhishek-paul123.s3-website.us-east-2.amazonaws.com/"><img class="socialbtn" src="images/website.png" alt=""></a>
     </div>
 
     <h3 id="art" style="color:#191414;"><center>Top Artists</center></h3>
