--- a/public/stats.html
+++ b/public/stats.html
@@ -41,37 +41,43 @@
         <a href="https://abhishekpaul.netlify.app/"><img class="socialbtn" src="images/website.png" alt=""></a>
     </div>
 
-    <h3 id="art" style="color:#191414;"><center>Top Artists</center></h3>
-    <div class="TopArtists">
+    <h3 class ="Title" style="color:#191414;">Top Artists</h3>
+    <div class="Category">
         <div class="time">
             <h5>4 Weeks</h5>
+            <div class="Songs"></div>
         </div>
         <div class="time">
             <h5>6 Months</h5>
+            <div class="Songs"></div>
         </div>
         <div class="time">
             <h5>All Time</h5>
+            <div class="Songs"></div>
         </div>
     </div>
 
 
-    <h3 id="song" style="color:#191414;"><center>Top Songs</center></h3>
-    <div class="TopSong">
+    <h3 class="Title" style="color:#191414;">Top Songs</h3>
+    <div class="Category">
         <div class="time">
             <h5>4 Weeks</h5>
+            <div class="Songs"></div>
         </div>
         <div class="time">
             <h5>6 Months</h5>
+            <div class="Songs"></div>
         </div>
         <div class="time">
             <h5>All Time</h5>
+            <div class="Songs"></div>
         </div>
     </div>
 
 
 
     
-    <h3 id="his" style="position:relative; top: -160px; color: #191414;"><center>Recently Played</center></h3>
+    <h3 class ="Title2" style="color: #191414;">Recently Played</h3>
     <div class="History">
     </div>
 
