added popularity and genres

--- a/public/stats.html
+++ b/public/stats.html
@@ -41,8 +41,8 @@
         <a href="https://abhishekpaul.netlify.app/"><img class="socialbtn" src="images/website.png" alt=""></a>
     </div>
 
-    <h3 class ="Title" style="color:#191414;">Top Artists</h3>
-    <div class="Category">
+    <h3 class ="Title" id="art">Top Artists</h3>
+    <div class="Category" >
         <div class="time">
             <h5>4 Weeks</h5>
             <div class="Songs"></div>
@@ -58,8 +58,8 @@
     </div>
 
 
-    <h3 class="Title" style="color:#191414;">Top Songs</h3>
-    <div class="Category">
+    <h3 class="Title" id="song">Top Songs</h3>
+    <div class="Category" >
         <div class="time">
             <h5>4 Weeks</h5>
             <div class="Songs"></div>
@@ -77,7 +77,7 @@
 
 
     
-    <h3 class ="Title2" style="color: #191414;">Recently Played</h3>
+    <h3 class ="Title2" id="his">Recently Played</h3>
     <div class="History">
     </div>
 
