added duration and relase date more stlying too

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
         <link rel="icon" href='images/unnamed.png'>
     </head>
     <body>
-        <p style="font-size:20px; font-family: 'Gotham', sans-serif; padding-left:20px;color: #191414;">Created by Abhishek</p>
+        <h1 style="font-size:25px; font-family: 'Gotham', sans-serif; padding-left:20px; color: #191414;">Created by Abhishek</h1>
         <div class="socials">
             <a href="https://github.com/Abhi-she-k"><img class="socialbtn" src="images/git.png" alt=""></a>
             <a href="https://www.linkedin.com/in/abhi311/"><img class="socialbtn" src="images/linkedin.png" alt=""></a>
             <a href="mailto:abhishek.paul@ryerson.ca"><img class="socialbtn" src="images/Gmail.png" alt=""></a>
-            <a href="http://abhishek-paul123.s3-website.us-east-2.amazonaws.com/"><img class="socialbtn" src="images/website.png" alt=""></a>
+            <a href="https://abhishekpaul.netlify.app/"><img class="socialbtn" src="images/website.png" alt=""></a>
         </div>
         <div class="LogIn">
                 
