--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 
                 <h1 class="title"><center>Spotify Stats</center></h1>
                 <center>
-                <button class="btn1" , onclick="window.location = '/functions/login'"><center>Log In</center> </button>
+                <button class="btn1" , onclick="window.location = '/login'"><center>Log In</center> </button>
                 </center>
                 
         </div>
